--- a/app/views/intra/index.html
+++ b/app/views/intra/index.html
@@ -5,19 +5,281 @@
 {% endblock %}
 
 {% block content %}
+<div class="nested-menu-widget">
+  <div class="top-nav">
+    <ul class="categories-list">
 
-<main id="content" role="main" class="home-page">
-  <div class="grid-row first-row">
-    <div class="column-third">
-      <img src="{{ asset_path }}images/big-news-1.jpg" alt="">
-    </div>
-    <div class="column-third">
-      <img src="{{ asset_path }}images/big-news-2.jpg" alt="">
-    </div>
-    <div class="column-third">
-      News
-    </div>
+      <li class="category-item not-current ">
+        <a href="index" class="category-link">
+          Home  </a>
+
+        <ul class="children-list">
+            </ul>
+      </li>
+
+      <li class="category-item not-current ">
+        <a href="https://intranet.justice.gov.uk/newspage/" class="category-link">
+          News  </a>
+
+        <ul class="children-list">
+            </ul>
+      </li>
+
+      <li class="category-item not-current main-nav-events">
+        <a href="https://intranet.justice.gov.uk/events/" class="category-link">
+          Events  </a>
+
+        <ul class="children-list">
+            </ul>
+      </li>
+
+      <li class="category-item current main-nav-guidance">
+        <a href="guidance1" class="category-link">
+          Guidance &amp; forms  </a>
+
+      </li>
+
+      <li class="category-item current main-nav-guidance">
+        <a href="my-work" class="category-link">
+          My work  </a>
+
+
+      </li>
+
+      <li class="category-item not-current main-nav-about-us">
+        <a href="https://intranet.justice.gov.uk/about-us/" class="category-link">
+          About us  </a>
+
+        <ul class="children-list">
+            </ul>
+      </li>
+
+      <li class="category-item not-current main-nav-blog">
+        <a href="https://intranet.justice.gov.uk/blog/" class="category-link">
+          Blog  </a>
+
+        <ul class="children-list">
+            </ul>
+      </li>
+    </ul>
   </div>
+</div>
+<main id="content" role="main" class="home-page">
+
+  <div class="grid-row first-row">
+    <div class="column-two-thirds">
+      <h1 class="intra-h1">Legal Aid Agency</h1>
+      <h2 class="home-page-h2">News</h2>
+      <div class="grid-row first-row">
+        <div class="column-half">
+          <div class="home-news-story">
+            <img src="{{ asset_path }}images/big-news-1.jpg" alt="">
+            <p class="home-page-story-link"><a href="#">Civil Service Awards: recognising role models</a></p>
+            <p class="smaller-text">Ten common myths about apprenticeships explained.
+              <time>23 Jun 2016</time>
+            </p>
+          </div>
+        </div>
+        <div class="column-half">
+          <div class="home-news-story">
+            <img src="{{ asset_path }}images/big-news-2.jpg" alt="">
+            <p class="home-page-story-link"><a href="#">Busting the myths about apprenticeships</a></p>
+            <p class="smaller-text">Ten common myths about apprenticeships explained.
+              <time>23 Jun 2016</time>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="grid-row">
+        <div class="column-half">
+          <div class="home-news-story">
+            <div class="news-thumbnail">
+              <img src="{{ asset_path }}images/small-image-1.jpg" alt="">
+            </div>
+            <div class="news-content">
+              <h3 class="title">
+                <a href="https://intranet.justice.gov.uk/news/ntk-jura-scores-win-at-cssc-awards/" class="news-link">JURA scores win at CSSC Awards</a>
+              </h3>
+              <time class="date">22 Jun 2016</time>
+            </div>
+          </div>
+        </div>
+        <div class="column-half">
+            <div class="home-news-story">
+              <div class="news-thumbnail">
+                <img src="{{ asset_path }}images/small-image-2.jpg" alt="">
+              </div>
+              <div class="news-content">
+                <h3 class="title">
+                  <a href="https://intranet.justice.gov.uk/news/ntk-jura-scores-win-at-cssc-awards/" class="news-link">Learning from your peers</a>
+                </h3>
+                <time class="date">22 Jun 2016</time>
+              </div>
+            </div>
+        </div>
+      </div>
+      <div class="grid-row">
+        <div class="column-half">
+          <div class="home-news-story">
+            <div class="news-thumbnail">
+              <img src="{{ asset_path }}images/small-image-1.jpg" alt="">
+            </div>
+            <div class="news-content">
+              <h3 class="title">
+                <a href="https://intranet.justice.gov.uk/news/ntk-jura-scores-win-at-cssc-awards/" class="news-link">JURA scores win at CSSC Awards</a>
+              </h3>
+              <time class="date">22 Jun 2016</time>
+            </div>
+          </div>
+        </div>
+        <div class="column-half">
+            <div class="home-news-story">
+              <div class="news-thumbnail">
+                <img src="{{ asset_path }}images/small-image-2.jpg" alt="">
+              </div>
+              <div class="news-content">
+                <h3 class="title">
+                  <a href="https://intranet.justice.gov.uk/news/ntk-jura-scores-win-at-cssc-awards/" class="news-link">Learning from your peers</a>
+                </h3>
+                <time class="date">22 Jun 2016</time>
+              </div>
+            </div>
+        </div>
+      </div>
+      <div class="grid-row">
+        <div class="column-half">
+          <div class="home-news-story">
+            <div class="news-thumbnail">
+              <img src="{{ asset_path }}images/small-image-1.jpg" alt="">
+            </div>
+            <div class="news-content">
+              <h3 class="title">
+                <a href="https://intranet.justice.gov.uk/news/ntk-jura-scores-win-at-cssc-awards/" class="news-link">JURA scores win at CSSC Awards</a>
+              </h3>
+              <time class="date">22 Jun 2016</time>
+            </div>
+          </div>
+        </div>
+        <div class="column-half">
+            <div class="home-news-story">
+              <div class="news-thumbnail">
+                <img src="{{ asset_path }}images/small-image-2.jpg" alt="">
+              </div>
+              <div class="news-content">
+                <h3 class="title">
+                  <a href="https://intranet.justice.gov.uk/news/ntk-jura-scores-win-at-cssc-awards/" class="news-link">Learning from your peers</a>
+                </h3>
+                <time class="date">22 Jun 2016</time>
+              </div>
+            </div>
+        </div>
+      </div>
+      <div class="grid-row">
+        <div class="column-half">
+          <div class="home-news-story">
+            <div class="news-thumbnail">
+              <img src="{{ asset_path }}images/small-image-1.jpg" alt="">
+            </div>
+            <div class="news-content">
+              <h3 class="title">
+                <a href="https://intranet.justice.gov.uk/news/ntk-jura-scores-win-at-cssc-awards/" class="news-link">JURA scores win at CSSC Awards</a>
+              </h3>
+              <time class="date">22 Jun 2016</time>
+            </div>
+          </div>
+        </div>
+        <div class="column-half">
+            <div class="home-news-story">
+              <div class="news-thumbnail">
+                <img src="{{ asset_path }}images/small-image-2.jpg" alt="">
+              </div>
+              <div class="news-content">
+                <h3 class="title">
+                  <a href="https://intranet.justice.gov.uk/news/ntk-jura-scores-win-at-cssc-awards/" class="news-link">Learning from your peers</a>
+                </h3>
+                <time class="date">22 Jun 2016</time>
+              </div>
+            </div>
+        </div>
+      </div>
+      <div class="grid-row">
+        <div class="column-half">
+          <div class="home-news-story">
+            <div class="news-thumbnail">
+              <img src="{{ asset_path }}images/small-image-1.jpg" alt="">
+            </div>
+            <div class="news-content">
+              <h3 class="title">
+                <a href="https://intranet.justice.gov.uk/news/ntk-jura-scores-win-at-cssc-awards/" class="news-link">JURA scores win at CSSC Awards</a>
+              </h3>
+              <time class="date">22 Jun 2016</time>
+            </div>
+          </div>
+        </div>
+        <div class="column-half">
+            <div class="home-news-story">
+              <div class="news-thumbnail">
+                <img src="{{ asset_path }}images/small-image-2.jpg" alt="">
+              </div>
+              <div class="news-content">
+                <h3 class="title">
+                  <a href="https://intranet.justice.gov.uk/news/ntk-jura-scores-win-at-cssc-awards/" class="news-link">Learning from your peers</a>
+                </h3>
+                <time class="date">22 Jun 2016</time>
+              </div>
+            </div>
+        </div>
+      </div>
+    </div>
+
+
+
+    <div class="column-third">
+      <h2 class="home-page-h2 my-agency">My LAA</h2>
+      <div class="archive-panel">
+        <p><a href="#">LAA archive intranet</a></p>
+      </div>
+        <div class="grid-row">
+          <div class="column-half">
+            <ul class="apps">
+              <li><a href="#">Link 1</a></li>
+              <li><a href="#">Link 1</a></li>
+              <li><a href="#">Link 1</a></li>
+              <li><a href="#">Link 1</a></li>
+              <li><a href="#">Link 1</a></li>
+            </ul>
+          </div>
+          <div class="column-half">
+            <ul class="apps">
+              <li><a href="#">Link 1</a></li>
+              <li><a href="#">Link 1</a></li>
+              <li><a href="#">Link 1</a></li>
+              <li><a href="#">Link 1</a></li>
+              <li><a href="#">Link 1</a></li>
+            </ul>
+          </div>
+
+        </div>
+        <h2 class="home-page-h2">Quick links</h2>
+        <ul class="quick-links">
+          <li><a href="#">Link 1</a></li>
+          <li><a href="#">Link 1</a></li>
+          <li><a href="#">Link 1</a></li>
+          <li><a href="#">Link 1</a></li>
+          <li><a href="#">Link 1</a></li>
+        </ul>
+
+
+      </div>
+    </div>
+
+
+  </div>
+
+
+
+
+
 </main>
 
 {% endblock %}
