--- a/app/views/intra-a/general/desk-aids.html
+++ b/app/views/intra-a/general/desk-aids.html
@@ -94,13 +94,13 @@
           <li class="main-section"><a href="/intra-a/my-work">My work</a></li>
           <li class="parent-section"><a href="/intra-a/general/">General</a></li>
           <li class="child">
-            <a href="/intra-a/civil/guidance">Guidance</a>
+            <a href="/intra-a/general/guidance">Guidance</a>
           </li>
           <li class="child">
-            <a href="/intra-a/civil/sops">SOPs</a>
+            <a href="/intra-a/general/sops">SOPs</a>
           </li>
           <li class="child current-page">
-            <a href="/intra-a/civil/desk-aids">Desk aids</a>
+            <a href="/intra-a/general/desk-aids">Desk aids</a>
           </li>
 
 
@@ -125,15 +125,26 @@
         </div>
 
 
+        <h2>
+          IT desk aids
+        </h2>
         <ul>
-          <li class="child">
-            <a href="/intra-a/civil/guidance">Guidance</a>
+          <li>
+            <a href="/laa/docs/it-issues-deskaid.pdf">IT desk aid</a>
           </li>
-          <li class="child">
-            <a href="/intra-a/civil/sops">SOPs</a>
+        </ul>
+        <h2>
+          Related training modules
+        </h2>
+        <ul>
+          <li>
+            <a href="https://www.justiceacademy.org.uk/mod/scorm/view.php?id=3470">LAR Module 1: The new framework</a>
           </li>
-          <li class="child">
-            <a href="/intra-a/civil/desk-aids">Desk aids</a>
+          <li>
+            <a href="https://www.justiceacademy.org.uk/mod/scorm/view.php?id=3471">LAR Module 2: Transitional arrangements</a>
+          </li>
+          <li>
+            <a href="https://www.justiceacademy.org.uk/mod/scorm/view.php?id=3472">LAR module 3: Assessing applications for legal representation</a>
           </li>
         </ul>
 
