--- a/app/views/intra-b/general/index.html
+++ b/app/views/intra-b/general/index.html
@@ -34,7 +34,7 @@
       </li>
 
       <li class="category-item current main-nav-guidance">
-        <a href="/intra-a/guidance1" class="category-link">
+        <a href="/intra-b/guidance1" class="category-link">
           Guidance &amp; forms  </a>
 
         <ul class="children-list">
@@ -42,7 +42,7 @@
       </li>
 
       <li class="category-item current main-nav-guidance">
-        <a href="/intra-a/my-work" class="category-link">
+        <a href="/intra-b/my-work" class="category-link">
           My work  </a>
 
 
@@ -71,17 +71,14 @@
 
   <div class="grid-row">
     <ul class="breadcrumbs-list">
-      <li class="breadcrumb-item "><a href="/intra-a/" class="breadcrumb-link">Home</a>
+      <li class="breadcrumb-item "><a href="/intra-b/" class="breadcrumb-link">Home</a>
               <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current"><a href="/intra-a/my-work" class="breadcrumb-link">My work</a>
-        <span class="separator"></span>
-      </li>
-      <li class="breadcrumb-item current"><a href="/intra-a/civil" class="breadcrumb-link">Crime</a>
+      <li class="breadcrumb-item current"><a href="/intra-b/my-work" class="breadcrumb-link">My work</a>
         <span class="separator"></span>
       </li>
 
-      <li class="breadcrumb-item current">Desk aids
+      <li class="breadcrumb-item current">General
 
       </li>
     </ul>
@@ -91,16 +88,16 @@
 
       <div class="left-hand-navigation">
         <ul>
-          <li class="main-section"><a href="/intra-a/my-work">My work</a></li>
-          <li class="parent-section"><a href="/intra-a/crime/">Crime</a></li>
+          <li class="main-section"><a href="/intra-b/my-work">My work</a></li>
+          <li class="parent-section"><a href="/intra-b/general/">General</a></li>
           <li class="child">
-            <a href="/intra-a/crime/guidance">Guidance</a>
+            <a href="/intra-b/general/guidance">Guidance</a>
           </li>
           <li class="child">
-            <a href="/intra-a/crime/sops">SOPs</a>
+            <a href="/intra-b/general/sops">SOPs</a>
           </li>
-          <li class="child current-page">
-            <a href="/intra-a/crime/desk-aids">Desk aids</a>
+          <li class="child">
+            <a href="/intra-b/general/desk-aids">Desk aids</a>
           </li>
 
 
@@ -114,7 +111,7 @@
 
 
       <div class="">
-        <h1 class="page-title">Crime desk aids</h1>
+        <h1 class="page-title">General</h1>
 
         <div class="page-metadata">
           <ul>
@@ -126,22 +123,17 @@
 
 
         <ul>
-          <li>
-            <a href="/laa/docs/ioj-desk-aid.pdf">IoJ desk aid</a>
+          <li class="child">
+            <a href="/intra-b/general/guidance">Guidance</a>
           </li>
-          <li>
-            <a href="/laa/docs/ccmt-desk-aid.pdf">CCMT desk aid</a>
+          <li class="child">
+            <a href="/intra-b/general/sops">SOPs</a>
           </li>
-          <li>
-            <a href="/laa/docs/identifying-complaints-desk-aid.doc">Identifying complaints desk aid</a>
-          </li>
-          <li>
-            <a href="/laa/docs/lat-december-changes-crime-deskaid.pdf">LAT December 2013 changes - Crime</a>
-          </li>
-          <li>
-            <a href="https://www.justiceacademy.org.uk/course/view.php?id=531">Overview to Crime and Civil Changes, Crime Fees and Prison Law (02 December 2013) - Justice Academy</a>
+          <li class="child">
+            <a href="/intra-b/general/desk-aids">Desk aids</a>
           </li>
         </ul>
+
 
       </div>
 
