--- a/app/views/intra-b/crime/sops.html
+++ b/app/views/intra-b/crime/sops.html
@@ -34,7 +34,7 @@
       </li>
 
       <li class="category-item current main-nav-guidance">
-        <a href="/intra-a/guidance1" class="category-link">
+        <a href="/intra-b/guidance1" class="category-link">
           Guidance &amp; forms  </a>
 
         <ul class="children-list">
@@ -42,7 +42,7 @@
       </li>
 
       <li class="category-item current main-nav-guidance">
-        <a href="/intra-a/my-work" class="category-link">
+        <a href="/intra-b/my-work" class="category-link">
           My work  </a>
 
 
@@ -71,13 +71,13 @@
 
   <div class="grid-row">
     <ul class="breadcrumbs-list">
-      <li class="breadcrumb-item "><a href="/intra-a/" class="breadcrumb-link">Home</a>
+      <li class="breadcrumb-item "><a href="/intra-b/" class="breadcrumb-link">Home</a>
               <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current"><a href="/intra-a/my-work" class="breadcrumb-link">My work</a>
+      <li class="breadcrumb-item current"><a href="/intra-b/my-work" class="breadcrumb-link">My work</a>
         <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current"><a href="/intra-a/crime/" class="breadcrumb-link">Crime</a>
+      <li class="breadcrumb-item current"><a href="/intra-b/crime/" class="breadcrumb-link">Crime</a>
         <span class="separator"></span>
       </li>
 
@@ -91,16 +91,16 @@
 
       <div class="left-hand-navigation">
         <ul>
-          <li class="main-section"><a href="/intra-a/my-work">My work</a></li>
-          <li class="parent-section"><a href="/intra-a/crime/">Crime</a></li>
+          <li class="main-section"><a href="/intra-b/my-work">My work</a></li>
+          <li class="parent-section"><a href="/intra-b/crime/">Crime</a></li>
           <li class="child">
-            <a href="/intra-a/crime/guidance">Guidance</a>
+            <a href="/intra-b/crime/guidance">Guidance</a>
           </li>
           <li class="child current-page">
-            <a href="/intra-a/crime/sops">SOPs</a>
+            <a href="/intra-b/crime/sops">SOPs</a>
           </li>
           <li class="child">
-            <a href="/intra-a/crime/desk-aids">Desk aids</a>
+            <a href="/intra-b/crime/desk-aids">Desk aids</a>
           </li>
 
 
