--- a/app/views/intra-b/general/desk-aids.html
+++ b/app/views/intra-b/general/desk-aids.html
@@ -34,7 +34,7 @@
       </li>
 
       <li class="category-item current main-nav-guidance">
-        <a href="/intra-a/guidance1" class="category-link">
+        <a href="/intra-b/guidance1" class="category-link">
           Guidance &amp; forms  </a>
 
         <ul class="children-list">
@@ -42,7 +42,7 @@
       </li>
 
       <li class="category-item current main-nav-guidance">
-        <a href="/intra-a/my-work" class="category-link">
+        <a href="/intra-b/my-work" class="category-link">
           My work  </a>
 
 
@@ -71,13 +71,13 @@
 
   <div class="grid-row">
     <ul class="breadcrumbs-list">
-      <li class="breadcrumb-item "><a href="/intra-a/" class="breadcrumb-link">Home</a>
+      <li class="breadcrumb-item "><a href="/intra-b/" class="breadcrumb-link">Home</a>
               <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current"><a href="/intra-a/my-work" class="breadcrumb-link">My work</a>
+      <li class="breadcrumb-item current"><a href="/intra-b/my-work" class="breadcrumb-link">My work</a>
         <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current"><a href="/intra-a/civil" class="breadcrumb-link">Crime</a>
+      <li class="breadcrumb-item current"><a href="/intra-b/general" class="breadcrumb-link">General/a>
         <span class="separator"></span>
       </li>
 
@@ -91,16 +91,16 @@
 
       <div class="left-hand-navigation">
         <ul>
-          <li class="main-section"><a href="/intra-a/my-work">My work</a></li>
-          <li class="parent-section"><a href="/intra-a/crime/">Crime</a></li>
+          <li class="main-section"><a href="/intra-b/my-work">My work</a></li>
+          <li class="parent-section"><a href="/intra-b/general/">General</a></li>
           <li class="child">
-            <a href="/intra-a/crime/guidance">Guidance</a>
+            <a href="/intra-b/general/guidance">Guidance</a>
           </li>
           <li class="child">
-            <a href="/intra-a/crime/sops">SOPs</a>
+            <a href="/intra-b/general/sops">SOPs</a>
           </li>
           <li class="child current-page">
-            <a href="/intra-a/crime/desk-aids">Desk aids</a>
+            <a href="/intra-b/general/desk-aids">Desk aids</a>
           </li>
 
 
@@ -114,7 +114,7 @@
 
 
       <div class="">
-        <h1 class="page-title">Crime desk aids</h1>
+        <h1 class="page-title">General desk aids</h1>
 
         <div class="page-metadata">
           <ul>
@@ -125,23 +125,29 @@
         </div>
 
 
+        <h2>
+          IT desk aids
+        </h2>
         <ul>
           <li>
-            <a href="/laa/docs/ioj-desk-aid.pdf">IoJ desk aid</a>
-          </li>
-          <li>
-            <a href="/laa/docs/ccmt-desk-aid.pdf">CCMT desk aid</a>
-          </li>
-          <li>
-            <a href="/laa/docs/identifying-complaints-desk-aid.doc">Identifying complaints desk aid</a>
-          </li>
-          <li>
-            <a href="/laa/docs/lat-december-changes-crime-deskaid.pdf">LAT December 2013 changes - Crime</a>
-          </li>
-          <li>
-            <a href="https://www.justiceacademy.org.uk/course/view.php?id=531">Overview to Crime and Civil Changes, Crime Fees and Prison Law (02 December 2013) - Justice Academy</a>
+            <a href="/laa/docs/it-issues-deskaid.pdf">IT desk aid</a>
           </li>
         </ul>
+        <h2>
+          Related training modules
+        </h2>
+        <ul>
+          <li>
+            <a href="https://www.justiceacademy.org.uk/mod/scorm/view.php?id=3470">LAR Module 1: The new framework</a>
+          </li>
+          <li>
+            <a href="https://www.justiceacademy.org.uk/mod/scorm/view.php?id=3471">LAR Module 2: Transitional arrangements</a>
+          </li>
+          <li>
+            <a href="https://www.justiceacademy.org.uk/mod/scorm/view.php?id=3472">LAR module 3: Assessing applications for legal representation</a>
+          </li>
+        </ul>
+
 
       </div>
 
