--- a/app/views/intra-b/hr/leave/laa-leave.html
+++ b/app/views/intra-b/hr/leave/laa-leave.html
@@ -34,7 +34,7 @@
       </li>
 
       <li class="category-item current main-nav-guidance">
-        <a href="/intra-a/guidance1" class="category-link">
+        <a href="/intra-b/guidance1" class="category-link">
           Guidance &amp; forms  </a>
 
         <ul class="children-list">
@@ -42,7 +42,7 @@
       </li>
 
       <li class="category-item current main-nav-guidance">
-        <a href="/intra-a/my-work" class="category-link">
+        <a href="/intra-b/my-work" class="category-link">
           My work  </a>
 
 
@@ -71,17 +71,19 @@
 
   <div class="grid-row">
     <ul class="breadcrumbs-list">
-      <li class="breadcrumb-item "><a href="/intra-a/" class="breadcrumb-link">Home</a>
+      <li class="breadcrumb-item "><a href="/intra-b/" class="breadcrumb-link">Home</a>
               <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current"><a href="/intra-a/my-work" class="breadcrumb-link">My work</a>
+      <li class="breadcrumb-item current"><a href="/intra-b/guidance1" class="breadcrumb-link">Guidance and forms</a>
         <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current"><a href="/intra-a/civil" class="breadcrumb-link">Crime</a>
+      <li class="breadcrumb-item current"><a href="/intra-b/hr" class="breadcrumb-link">HR</a>
         <span class="separator"></span>
       </li>
-
-      <li class="breadcrumb-item current">Desk aids
+      <li class="breadcrumb-item current"><a href="/intra-b/hr" class="breadcrumb-link">Leave</a>
+        <span class="separator"></span>
+      </li>
+      <li class="breadcrumb-item current">Parental leave policy - LSC legacy terms
 
       </li>
     </ul>
@@ -90,21 +92,32 @@
     <div class="column-third">
 
       <div class="left-hand-navigation">
-        <ul>
-          <li class="main-section"><a href="/intra-a/my-work">My work</a></li>
-          <li class="parent-section"><a href="/intra-a/crime/">Crime</a></li>
-          <li class="child">
-            <a href="/intra-a/crime/guidance">Guidance</a>
-          </li>
-          <li class="child">
-            <a href="/intra-a/crime/sops">SOPs</a>
-          </li>
-          <li class="child current-page">
-            <a href="/intra-a/crime/desk-aids">Desk aids</a>
-          </li>
+          <ul>
+            <li class="main-section"><a href="/intra-b/guidance1">Guidance &amp; forms</a></li>
+            <li class="parent-section"><a href="/intra-b/hr/">HR</a></li>
+            <li class="child-folder">
+              <a href="/intra-b/hr/leave">Leave</a>
+            </li>
+            <li class="child-level-2">
+              <a href="#">Adoption leave</a>
+            </li>
+            <li class="child-level-2">
+              <a href="#">Career break</a>
+            </li>
+            <li class="child-level-2 current-page">
+              <a href="/intra-b/hr/leave/laa-leave">Parental leave policy - LSC legacy terms</a>
+            </li>
+            <li class="child-level-2">
+              <a href="/intra-b/hr/leave/parental-leave">Parental leave policy - MoJ</a>
+            </li>
+            <li class="child-level-2">
+              <a href="#">Privilege days</a>
+            </li>
+            <li class="child-level-2">
+              <a href="#">Trade union facility time</a>
+            </li>
 
-
-        </ul>
+          </ul>
       </div>
 
     </div>
@@ -114,38 +127,19 @@
 
 
       <div class="">
-        <h1 class="page-title">Crime desk aids</h1>
+        <h1 class="page-title">Parental leave policy</h1>
 
         <div class="page-metadata">
           <ul>
-            <li>Content owner: <a href="mailto:hr@exmaple.com">LAA Operations</a></li>
+            <li>Content owner: <a href="mailto:hr@exmaple.com">LAA HR</a></li>
             <li>Last updated: 27 March 2016</li>
           </ul>
 
         </div>
 
+        <p>The policies below apply to those LAA staff who have remained on LSC legacy terms and conditions</p>
 
-        <ul>
-          <li>
-            <a href="/laa/docs/ioj-desk-aid.pdf">IoJ desk aid</a>
-          </li>
-          <li>
-            <a href="/laa/docs/ccmt-desk-aid.pdf">CCMT desk aid</a>
-          </li>
-          <li>
-            <a href="/laa/docs/identifying-complaints-desk-aid.doc">Identifying complaints desk aid</a>
-          </li>
-          <li>
-            <a href="/laa/docs/lat-december-changes-crime-deskaid.pdf">LAT December 2013 changes - Crime</a>
-          </li>
-          <li>
-            <a href="https://www.justiceacademy.org.uk/course/view.php?id=531">Overview to Crime and Civil Changes, Crime Fees and Prison Law (02 December 2013) - Justice Academy</a>
-          </li>
-        </ul>
-
-      </div>
-
-
+        <p><a href="#">Parental leave policy</a> [WORD]</p>
 
   </div>
 
