--- a/app/views/intra-b/index.html
+++ b/app/views/intra-b/index.html
@@ -10,7 +10,7 @@
     <ul class="categories-list">
 
       <li class="category-item not-current ">
-        <a href="index" class="category-link">
+        <a href="/intra-b/index" class="category-link">
           Home  </a>
 
         <ul class="children-list">
@@ -18,7 +18,7 @@
       </li>
 
       <li class="category-item not-current ">
-        <a href="https://intranet.justice.gov.uk/newspage/" class="category-link">
+        <a href="#" class="category-link">
           News  </a>
 
         <ul class="children-list">
@@ -26,7 +26,7 @@
       </li>
 
       <li class="category-item not-current main-nav-events">
-        <a href="https://intranet.justice.gov.uk/events/" class="category-link">
+        <a href="#" class="category-link">
           Events  </a>
 
         <ul class="children-list">
@@ -34,20 +34,20 @@
       </li>
 
       <li class="category-item current main-nav-guidance">
-        <a href="guidance1" class="category-link">
+        <a href="/intra-b/guidance1" class="category-link">
           Guidance &amp; forms  </a>
 
       </li>
 
       <li class="category-item current main-nav-guidance">
-        <a href="my-work" class="category-link">
+        <a href="/intra-b/my-work" class="category-link">
           My work  </a>
 
 
       </li>
 
       <li class="category-item not-current main-nav-about-us">
-        <a href="https://intranet.justice.gov.uk/about-us/" class="category-link">
+        <a href="#" class="category-link">
           About us  </a>
 
         <ul class="children-list">
