--- a/app/views/intra-b/my-work.html
+++ b/app/views/intra-b/my-work.html
@@ -11,7 +11,7 @@
     <ul class="categories-list">
 
       <li class="category-item not-current ">
-        <a href="/intra-b/index" class="category-link">
+        <a href="/intra-b/" class="category-link">
           Home  </a>
 
         <ul class="children-list">
@@ -19,7 +19,7 @@
       </li>
 
       <li class="category-item not-current ">
-        <a href="#" class="category-link">
+        <a href="https://intranet.justice.gov.uk/newspage/" class="category-link">
           News  </a>
 
         <ul class="children-list">
@@ -27,7 +27,7 @@
       </li>
 
       <li class="category-item not-current main-nav-events">
-        <a href="#" class="category-link">
+        <a href="https://intranet.justice.gov.uk/events/" class="category-link">
           Events  </a>
 
         <ul class="children-list">
@@ -35,15 +35,21 @@
       </li>
 
       <li class="category-item current main-nav-guidance">
-        <a href="/intra-b/guidance1" class="category-link">
-          Guidance &amp; forms  </a>
+        <a href="guidance1" class="category-link">
+          Guidance &amp; forms </a>
 
-        <ul class="children-list">
-            </ul>
+
       </li>
 
+      <!--li class="category-item current main-nav-guidance">
+        <a href="guidance-laa" class="category-link">
+          LAA guidance  </a>
+
+
+      </li-->
+
       <li class="category-item current main-nav-guidance">
-        <a href="/intra-b/my-work" class="category-link">
+        <a href="my-work" class="category-link">
           My work  </a>
 
 
@@ -73,11 +79,11 @@
     <li class="breadcrumb-item "><a href="/intra-b/" class="breadcrumb-link">Home</a>
             <span class="separator"></span>
     </li>
-    <li class="breadcrumb-item current">Guidance and forms</li>
+    <li class="breadcrumb-item current">My work</li>
   </ul>
   <div class="grid-row">
     <div class="column-half">
-      <h1 class="intra-h1">Guidance &amp; forms</h1>
+      <h1 class="intra-h1">My work</h1>
     </div>
   </div>
   <div class="grid-row">
@@ -85,71 +91,82 @@
     <div class="column-third guidance">
 
     <h3 class="category-title">
-      <a href="https://intranet.justice.gov.uk/guidance/commercial-contract-management/">Commercial and contract management</a>
+      <a href="/intra-b/civil/">Civil</a>
     </h3>
 
-    <ul class="children-list"><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/commercial-contract-management/how-to-obtain-goods-and-services/travel/hotels/">Hotels</a>
-    </h4>
-  </li><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/commercial-contract-management/how-to-obtain-goods-and-services/travel/trains-except-eurostar/">Trains (except Eurostar)</a>
-    </h4>
-  </li><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/commercial-contract-management/how-to-obtain-goods-and-services/travel/using-redfern-travel/">Using Redfern Travel (tRIPS)</a>
-    </h4>
-  </li></ul>
+    <ul class="children-list">
+      <li class="child-item">
+        <h4 class="child-title">
+          <a href="/intra-b/civil/guidance">Civil guidance</a>
+        </h4>
+      </li>
+      <li class="child-item">
+        <h4 class="child-title">
+          <a href="/intra-b/civil/sops">Civil SOPs</a>
+        </h4>
+      </li>
+      <li class="child-item">
+        <h4 class="child-title">
+          <a href="/intra-b/civil/desk-aids">Civil desk aids</a>
+        </h4>
+      </li>
+    </ul>
+
+    </div>
+    <div class="column-third guidance">
+      <h3 class="category-title">
+        <a href="/intra-b/crime/">Crime</a>
+      </h3>
+
+      <ul class="children-list">
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-b/crime/guidance">Crime guidance</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-b/crime/sops">Crime SOPs</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="/intra-b/crime/desk-aids">Crime desk aids</a>
+          </h4>
+        </li>
+      </ul>
 
     </div>
     <div class="column-third guidance">
 
     <h3 class="category-title">
-      <a href="https://intranet.justice.gov.uk/guidance/fire-health-safety/">Fire, health and safety</a>
+      <a href="/intra-b/general">General</a>
     </h3>
 
-    <ul class="children-list"><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/fire-health-safety/display-screen-equipment-workstation-support/">Display screen equipment and workstation support</a>
-    </h4>
-  </li><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/fire-health-safety/risk-assessment/">Risk assessment</a>
-    </h4>
-  </li><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/fire-health-safety/safety-in-the-office/">Safety in the office</a>
-    </h4>
-  </li></ul>
-
-    </div>
-    <div class="column-third guidance">
-
-    <h3 class="category-title">
-      <a href="https://intranet.justice.gov.uk/guidance/it-services/">IT and Digital</a>
-    </h3>
-
-    <ul class="children-list"><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/it-services/it-in-moj/">IT in MoJ</a>
-    </h4>
-  </li><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/it-services/it-portal/">IT portal</a>
-    </h4>
-  </li><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/it-services/improvement-initiatives/">Improving your service</a>
-    </h4>
-  </li></ul>
+    <ul class="children-list">
+      <li class="child-item">
+        <h4 class="child-title">
+          <a href="/intra-b/general/guidance">General guidance</a>
+        </h4>
+      </li>
+      <li class="child-item">
+        <h4 class="child-title">
+          <a href="/intra-b/general/sops">General SOPs</a>
+        </h4>
+      </li>
+      <li class="child-item">
+        <h4 class="child-title">
+          <a href="/intra-b/general/desk-aids">General desk aids</a>
+        </h4>
+      </li>
+    </ul>
 
     </div>
 
 
   </div>
 
-  <div class="grid-row second-row">
+  <!--div class="grid-row second-row">
 
     <div class="column-third guidance">
 
@@ -178,7 +195,7 @@
 
 
       <h3 class="category-title">
-        <a href="/intra-b/hr">HR</a>
+        <a href="content-page">HR</a>
       </h3>
 
       <ul class="children-list"><li class="child-item">
@@ -187,7 +204,7 @@
       </h4>
     </li><li class="child-item">
       <h4 class="child-title">
-        <a href="/intra-b/hr/pay">Pay and benefits</a>
+        <a href="https://intranet.justice.gov.uk/guidance/hr/pay-benefits/">Pay and benefits</a>
       </h4>
     </li><li class="child-item">
       <h4 class="child-title">
@@ -222,7 +239,7 @@
     </div>
 
 
-  </div>
+  </div-->
 
 
 
