--- a/app/views/intra-b/guidance1.html
+++ b/app/views/intra-b/guidance1.html
@@ -36,10 +36,14 @@
 
       <li class="category-item current main-nav-guidance">
         <a href="/intra-b/guidance1" class="category-link">
-          Guidance &amp; forms  </a>
+          MoJ guidance  </a>
 
-        <ul class="children-list">
-            </ul>
+      </li>
+
+      <li class="category-item current main-nav-guidance">
+        <a href="/intra-b/guidance2" class="category-link">
+          LAA guidance  </a>
+
       </li>
 
       <li class="category-item current main-nav-guidance">
@@ -50,7 +54,7 @@
       </li>
 
       <li class="category-item not-current main-nav-about-us">
-        <a href="https://intranet.justice.gov.uk/about-us/" class="category-link">
+        <a href="#" class="category-link">
           About us  </a>
 
         <ul class="children-list">
@@ -73,7 +77,7 @@
     <li class="breadcrumb-item "><a href="/intra-b/" class="breadcrumb-link">Home</a>
             <span class="separator"></span>
     </li>
-    <li class="breadcrumb-item current">Guidance and forms</li>
+    <li class="breadcrumb-item current">Moj Guidance</li>
   </ul>
   <div class="grid-row">
     <div class="column-half">
