--- a/app/views/intra-b/guidance2.html
+++ b/app/views/intra-b/guidance2.html
@@ -11,7 +11,7 @@
     <ul class="categories-list">
 
       <li class="category-item not-current ">
-        <a href="index" class="category-link">
+        <a href="/intra-b/index" class="category-link">
           Home  </a>
 
         <ul class="children-list">
@@ -19,7 +19,7 @@
       </li>
 
       <li class="category-item not-current ">
-        <a href="https://intranet.justice.gov.uk/newspage/" class="category-link">
+        <a href="#" class="category-link">
           News  </a>
 
         <ul class="children-list">
@@ -27,7 +27,7 @@
       </li>
 
       <li class="category-item not-current main-nav-events">
-        <a href="https://intranet.justice.gov.uk/events/" class="category-link">
+        <a href="#" class="category-link">
           Events  </a>
 
         <ul class="children-list">
@@ -35,28 +35,26 @@
       </li>
 
       <li class="category-item current main-nav-guidance">
-        <a href="guidance1" class="category-link">
+        <a href="/intra-b/guidance1" class="category-link">
           MoJ guidance  </a>
 
-
       </li>
 
       <li class="category-item current main-nav-guidance">
-        <a href="guidance-laa" class="category-link">
+        <a href="/intra-b/guidance2" class="category-link">
           LAA guidance  </a>
 
-
       </li>
 
       <li class="category-item current main-nav-guidance">
-        <a href="my-work" class="category-link">
+        <a href="/intra-b/my-work" class="category-link">
           My work  </a>
 
 
       </li>
 
       <li class="category-item not-current main-nav-about-us">
-        <a href="https://intranet.justice.gov.uk/about-us/" class="category-link">
+        <a href="#" class="category-link">
           About us  </a>
 
         <ul class="children-list">
@@ -79,7 +77,7 @@
     <li class="breadcrumb-item "><a href="home" class="breadcrumb-link">Home</a>
             <span class="separator"></span>
     </li>
-    <li class="breadcrumb-item current">Guidance and forms</li>
+    <li class="breadcrumb-item current">LAA guidance</li>
   </ul>
   <div class="grid-row">
     <div class="column-half">
@@ -88,98 +86,34 @@
   </div>
   <div class="grid-row">
 
-    <div class="column-third guidance">
 
-    <h3 class="category-title">
-      <a href="https://intranet.justice.gov.uk/guidance/commercial-contract-management/">Commercial and contract management</a>
-    </h3>
-
-    <ul class="children-list"><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/commercial-contract-management/how-to-obtain-goods-and-services/travel/hotels/">Hotels</a>
-    </h4>
-  </li><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/commercial-contract-management/how-to-obtain-goods-and-services/travel/trains-except-eurostar/">Trains (except Eurostar)</a>
-    </h4>
-  </li><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/commercial-contract-management/how-to-obtain-goods-and-services/travel/using-redfern-travel/">Using Redfern Travel (tRIPS)</a>
-    </h4>
-  </li></ul>
-
-    </div>
-    <div class="column-third guidance">
-
-    <h3 class="category-title">
-      <a href="https://intranet.justice.gov.uk/guidance/fire-health-safety/">Fire, health and safety</a>
-    </h3>
-
-    <ul class="children-list"><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/fire-health-safety/display-screen-equipment-workstation-support/">Display screen equipment and workstation support</a>
-    </h4>
-  </li><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/fire-health-safety/risk-assessment/">Risk assessment</a>
-    </h4>
-  </li><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/fire-health-safety/safety-in-the-office/">Safety in the office</a>
-    </h4>
-  </li></ul>
-
-    </div>
-    <div class="column-third guidance">
-
-    <h3 class="category-title">
-      <a href="https://intranet.justice.gov.uk/guidance/it-services/">IT and Digital</a>
-    </h3>
-
-    <ul class="children-list"><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/it-services/it-in-moj/">IT in MoJ</a>
-    </h4>
-  </li><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/it-services/it-portal/">IT portal</a>
-    </h4>
-  </li><li class="child-item">
-    <h4 class="child-title">
-      <a href="https://intranet.justice.gov.uk/guidance/it-services/improvement-initiatives/">Improving your service</a>
-    </h4>
-  </li></ul>
-
-    </div>
-
-
-  </div>
-
-  <div class="grid-row second-row">
 
     <div class="column-third guidance">
-
 
       <h3 class="category-title">
-        <a href="https://intranet.justice.gov.uk/guidance/financial-management/financial-principles-and-controls/">Financial principles and controls</a>
+        <a href="https://intranet.justice.gov.uk/guidance/it-services/">IT and Digital</a>
       </h3>
 
-      <ul class="children-list"><li class="child-item">
-      <h4 class="child-title">
-        <a href="https://intranet.justice.gov.uk/guidance/financial-management/banking-cash-management/">Banking and cash management</a>
-      </h4>
-    </li><li class="child-item">
-      <h4 class="child-title">
-        <a href="https://intranet.justice.gov.uk/guidance/financial-management/">Financial management</a>
-      </h4>
-    </li><li class="child-item">
-      <h4 class="child-title">
-        <a href="https://intranet.justice.gov.uk/guidance/financial-management/training/">Training</a>
-      </h4>
-    </li></ul>
-
+      <ul class="children-list">
+        <li class="child-item">
+        <h4 class="child-title">
+          <a href="#">IT in LAA</a>
+        </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+            <a href="https://intranet.justice.gov.uk/guidance/it-services/it-portal/">IT portal</a>
+          </h4>
+        </li>
+        <li class="child-item">
+          <h4 class="child-title">
+          <a href="https://intranet.justice.gov.uk/guidance/it-services/improvement-initiatives/">Improving your service</a>
+          </h4>
+      </li>
+    </ul>
 
     </div>
+
     <div class="column-third guidance">
 
 
@@ -193,7 +127,7 @@
       </h4>
     </li><li class="child-item">
       <h4 class="child-title">
-        <a href="https://intranet.justice.gov.uk/guidance/hr/pay-benefits/">Pay and benefits</a>
+        <a href="/intra-b/hr/leave/laa-leave">Pay and benefits</a>
       </h4>
     </li><li class="child-item">
       <h4 class="child-title">
@@ -203,29 +137,10 @@
 
 
     </div>
-    <div class="column-third guidance">
 
 
-      <h3 class="category-title">
-        <a href="https://intranet.justice.gov.uk/guidance/knowledge-information/">Knowledge and information</a>
-      </h3>
+  </div>
 
-      <ul class="children-list"><li class="child-item">
-      <h4 class="child-title">
-        <a href="https://intranet.justice.gov.uk/guidance/knowledge-information/knowledge-management/">Knowledge management</a>
-      </h4>
-    </li><li class="child-item">
-      <h4 class="child-title">
-        <a href="https://intranet.justice.gov.uk/guidance/knowledge-information/library-services/">Library services</a>
-      </h4>
-    </li><li class="child-item">
-      <h4 class="child-title">
-        <a href="https://intranet.justice.gov.uk/guidance/knowledge-information/managing-information/">Managing information</a>
-      </h4>
-    </li></ul>
-
-
-    </div>
 
 
   </div>
