--- a/app/views/intra-b/hr/leave/parental-leave.html
+++ b/app/views/intra-b/hr/leave/parental-leave.html
@@ -10,7 +10,7 @@
     <ul class="categories-list">
 
       <li class="category-item not-current ">
-        <a href="index" class="category-link">
+        <a href="/intra-b/index" class="category-link">
           Home  </a>
 
         <ul class="children-list">
@@ -18,7 +18,7 @@
       </li>
 
       <li class="category-item not-current ">
-        <a href="https://intranet.justice.gov.uk/newspage/" class="category-link">
+        <a href="#" class="category-link">
           News  </a>
 
         <ul class="children-list">
@@ -26,7 +26,7 @@
       </li>
 
       <li class="category-item not-current main-nav-events">
-        <a href="https://intranet.justice.gov.uk/events/" class="category-link">
+        <a href="#" class="category-link">
           Events  </a>
 
         <ul class="children-list">
@@ -35,12 +35,15 @@
 
       <li class="category-item current main-nav-guidance">
         <a href="/intra-b/guidance1" class="category-link">
-          Guidance &amp; forms  </a>
+          MoJ guidance  </a>
 
-        <ul class="children-list">
-            </ul>
       </li>
 
+      <li class="category-item current main-nav-guidance">
+        <a href="/intra-b/guidance2" class="category-link">
+          LAA guidance  </a>
+
+      </li>
 
       <li class="category-item current main-nav-guidance">
         <a href="/intra-b/my-work" class="category-link">
@@ -50,7 +53,7 @@
       </li>
 
       <li class="category-item not-current main-nav-about-us">
-        <a href="https://intranet.justice.gov.uk/about-us/" class="category-link">
+        <a href="#" class="category-link">
           About us  </a>
 
         <ul class="children-list">
@@ -74,7 +77,7 @@
       <li class="breadcrumb-item "><a href="/intra-b/" class="breadcrumb-link">Home</a>
               <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current"><a href="/intra-b/guidance1" class="breadcrumb-link">Guidance and forms</a>
+      <li class="breadcrumb-item current"><a href="/intra-b/guidance1" class="breadcrumb-link">LAA guidance</a>
         <span class="separator"></span>
       </li>
       <li class="breadcrumb-item current"><a href="/intra-b/hr" class="breadcrumb-link">HR</a>
@@ -93,7 +96,7 @@
 
       <div class="left-hand-navigation">
           <ul>
-            <li class="main-section"><a href="guidance1">Guidance &amp; forms</a></li>
+            <li class="main-section"><a href="guidance1">LAA guidance</a></li>
             <li class="parent-section"><a href="/intra-b/hr/">HR</a></li>
             <li class="child-folder">
               <a href="#">Leave</a>
