--- a/app/views/intra-b/index.html
+++ b/app/views/intra-b/index.html
@@ -35,7 +35,13 @@
 
       <li class="category-item current main-nav-guidance">
         <a href="/intra-b/guidance1" class="category-link">
-          Guidance &amp; forms  </a>
+          MoJ guidance  </a>
+
+      </li>
+
+      <li class="category-item current main-nav-guidance">
+        <a href="/intra-b/guidance2" class="category-link">
+          LAA guidance  </a>
 
       </li>
 
