--- a/app/views/intra-b/my-work.html
+++ b/app/views/intra-b/my-work.html
@@ -11,7 +11,7 @@
     <ul class="categories-list">
 
       <li class="category-item not-current ">
-        <a href="/intra-b/" class="category-link">
+        <a href="/intra-b/index" class="category-link">
           Home  </a>
 
         <ul class="children-list">
@@ -19,7 +19,7 @@
       </li>
 
       <li class="category-item not-current ">
-        <a href="https://intranet.justice.gov.uk/newspage/" class="category-link">
+        <a href="#" class="category-link">
           News  </a>
 
         <ul class="children-list">
@@ -27,7 +27,7 @@
       </li>
 
       <li class="category-item not-current main-nav-events">
-        <a href="https://intranet.justice.gov.uk/events/" class="category-link">
+        <a href="#" class="category-link">
           Events  </a>
 
         <ul class="children-list">
@@ -35,28 +35,26 @@
       </li>
 
       <li class="category-item current main-nav-guidance">
-        <a href="guidance1" class="category-link">
-          Guidance &amp; forms </a>
-
+        <a href="/intra-b/guidance1" class="category-link">
+          MoJ guidance  </a>
 
       </li>
 
-      <!--li class="category-item current main-nav-guidance">
-        <a href="guidance-laa" class="category-link">
+      <li class="category-item current main-nav-guidance">
+        <a href="/intra-b/guidance2" class="category-link">
           LAA guidance  </a>
 
-
-      </li-->
+      </li>
 
       <li class="category-item current main-nav-guidance">
-        <a href="my-work" class="category-link">
+        <a href="/intra-b/my-work" class="category-link">
           My work  </a>
 
 
       </li>
 
       <li class="category-item not-current main-nav-about-us">
-        <a href="https://intranet.justice.gov.uk/about-us/" class="category-link">
+        <a href="#" class="category-link">
           About us  </a>
 
         <ul class="children-list">
