fixes for B prototype

--- a/app/views/intra-b/guidance1.html
+++ b/app/views/intra-b/guidance1.html
@@ -182,7 +182,7 @@
 
 
       <h3 class="category-title">
-        <a href="/intra-b/hr">HR</a>
+        <a href="/intra-b/hr/moj-index">HR</a>
       </h3>
 
       <ul class="children-list"><li class="child-item">
