--- a/app/views/intra-b/guidance2.html
+++ b/app/views/intra-b/guidance2.html
@@ -118,7 +118,7 @@
 
 
       <h3 class="category-title">
-        <a href="content-page">HR</a>
+        <a href="/intra-b/hr/">HR</a>
       </h3>
 
       <ul class="children-list"><li class="child-item">
@@ -127,7 +127,7 @@
       </h4>
     </li><li class="child-item">
       <h4 class="child-title">
-        <a href="/intra-b/hr/leave/laa-leave">Pay and benefits</a>
+        <a href="/intra-b/hr/pay/">Pay and benefits</a>
       </h4>
     </li><li class="child-item">
       <h4 class="child-title">
