--- a/app/views/intra-b/hr/leave/laa-leave.html
+++ b/app/views/intra-b/hr/leave/laa-leave.html
@@ -95,32 +95,19 @@
     <div class="column-third">
 
       <div class="left-hand-navigation">
-          <ul>
-            <li class="main-section"><a href="/intra-b/guidance1">Guidance &amp; forms</a></li>
-            <li class="parent-section"><a href="/intra-b/hr/">HR</a></li>
-            <li class="child-folder">
-              <a href="/intra-b/hr/leave">Leave</a>
-            </li>
-            <li class="child-level-2">
-              <a href="#">Adoption leave</a>
-            </li>
-            <li class="child-level-2">
-              <a href="#">Career break</a>
-            </li>
-            <li class="child-level-2 current-page">
-              <a href="/intra-b/hr/leave/laa-leave">Parental leave policy - LSC legacy terms</a>
-            </li>
-            <li class="child-level-2">
-              <a href="/intra-b/hr/leave/parental-leave">Parental leave policy - MoJ</a>
-            </li>
-            <li class="child-level-2">
-              <a href="#">Privilege days</a>
-            </li>
-            <li class="child-level-2">
-              <a href="#">Trade union facility time</a>
-            </li>
+        <ul>
+          <li class="main-section"><a href="/intra-b/guidance2">LAA guidance</a></li>
+          <li class="parent-section"><a href="/intra-b/hr/leave/">HR</a></li>
+          <li class="child-folder">
+            <a href="/intra-b/hr/leave">Leave</a>
+          </li>
 
-          </ul>
+          <li class="child-level-2">
+            <a href="/intra-b/hr/leave/laa-leave">Parental leave policy - LSC legacy terms</a>
+          </li>
+
+
+        </ul>
       </div>
 
     </div>
