--- a/app/views/intra-b/hr/moj-index.html
+++ b/app/views/intra-b/hr/moj-index.html
@@ -10,7 +10,7 @@
     <ul class="categories-list">
 
       <li class="category-item not-current ">
-        <a href="index" class="category-link">
+        <a href="/intra-b/index" class="category-link">
           Home  </a>
 
         <ul class="children-list">
@@ -18,7 +18,7 @@
       </li>
 
       <li class="category-item not-current ">
-        <a href="https://intranet.justice.gov.uk/newspage/" class="category-link">
+        <a href="#" class="category-link">
           News  </a>
 
         <ul class="children-list">
@@ -26,7 +26,7 @@
       </li>
 
       <li class="category-item not-current main-nav-events">
-        <a href="https://intranet.justice.gov.uk/events/" class="category-link">
+        <a href="#" class="category-link">
           Events  </a>
 
         <ul class="children-list">
@@ -34,11 +34,15 @@
       </li>
 
       <li class="category-item current main-nav-guidance">
-        <a href="guidance2" class="category-link">
+        <a href="/intra-b/guidance1" class="category-link">
+          MoJ guidance  </a>
+
+      </li>
+
+      <li class="category-item current main-nav-guidance">
+        <a href="/intra-b/guidance2" class="category-link">
           LAA guidance  </a>
 
-        <ul class="children-list">
-            </ul>
       </li>
 
       <li class="category-item current main-nav-guidance">
@@ -48,9 +52,8 @@
 
       </li>
 
-
       <li class="category-item not-current main-nav-about-us">
-        <a href="https://intranet.justice.gov.uk/about-us/" class="category-link">
+        <a href="#" class="category-link">
           About us  </a>
 
         <ul class="children-list">
@@ -74,7 +77,7 @@
       <li class="breadcrumb-item "><a href="/intra-b/" class="breadcrumb-link">Home</a>
               <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current"><a href="/intra-b/guidance2" class="breadcrumb-link">LAA guidance</a>
+      <li class="breadcrumb-item current"><a href="/intra-b/guidance1" class="breadcrumb-link">MoJ guidance</a>
         <span class="separator"></span>
       </li>
       <li class="breadcrumb-item current">HR
@@ -87,16 +90,65 @@
 
       <div class="left-hand-navigation">
           <ul>
-            <li class="main-section"><a href="/intra-b/guidance1">Guidance &amp; forms</a></li>
+            <li class="main-section"><a href="/intra-b/guidance1">MoJ guidance</a></li>
             <li class="parent-section"><a href="#">HR</a></li>
-
             <li class="child">
-              <a href="/intra-b/hr/leave">Leave</a>
+              <a href="#">Sick absence</a>
+            </li>
+            <li class="child">
+              <a href="#">Performance management</a>
+            </li>
+            <li class="child">
+              <a href="#">Voluntary Early Redundancy (VEDS)</a>
+            </li>
+            <li class="child">
+              <a href="#">Organisational change framework</a>
+            </li>
+            <li class="child">
+              <a href="#">Customer service</a>
+            </li>
+            <li class="child">
+              <a href="#">Recruitment</a>
+            </li>
+            <li class="child">
+              <a href="#">End or change employment</a>
+            </li>
+            <li class="child">
+              <a href="/intra-b/hr/leave/moj-index">Leave</a>
             </li>
             <li class="child">
               <a href="/intra-b/hr/pay">Pay and benefits</a>
             </li>
-
+            <li class="child">
+              <a href="#">Induction</a>
+            </li>
+            <li class="child">
+              <a href="#">Corporate performance group (CPG)</a>
+            </li>
+            <li class="child">
+              <a href="#">Non-Phoenix access</a>
+            </li>
+            <li class="child">
+              <a href="#">Pensions</a>
+            </li>
+            <li class="child">
+              <a href="#">Phoenix</a>
+            </li>
+            <li class="child">
+              <a href="#">Learning and development</a>
+            </li>
+            <li class="child">
+              <a href="#">Contact shared services</a>
+            </li>
+            <li class="child">
+              <a href="#">Support and wellbeing</a>
+            </li>
+            <li class="child">
+              <a href="#">Conduct and behaviour</a>
+            </li>
+            <li class="child">
+              <a href="#">Change toolkit</a>
+            </li>
 
 
 
