--- a/app/views/intra-b/hr/pay/moj-index.html
+++ b/app/views/intra-b/hr/pay/moj-index.html
@@ -77,7 +77,7 @@
       <li class="breadcrumb-item "><a href="/intra-b/" class="breadcrumb-link">Home</a>
               <span class="separator"></span>
       </li>
-      <li class="breadcrumb-item current"><a href="/intra-b/guidance2" class="breadcrumb-link">LAA guidance</a>
+      <li class="breadcrumb-item current"><a href="/intra-b/guidance1" class="breadcrumb-link">Guidance and forms</a>
         <span class="separator"></span>
       </li>
       <li class="breadcrumb-item current"><a href="/intra-b/hr" class="breadcrumb-link">HR</a>
@@ -93,9 +93,44 @@
 
       <div class="left-hand-navigation">
           <ul>
-            <li class="main-section"><a href="guidance2">LAA guidance</a></li>
-            <li class="parent-section"><a href="/intra-b/hr/moj-index">HR</a></li>
-            
+            <li class="main-section"><a href="guidance1">Guidance &amp; forms</a></li>
+            <li class="parent-section"><a href="/intra-b/hr/">HR</a></li>
+            <li class="child-folder">
+              <a href="#">Pay and benefits</a>
+            </li>
+            <li class="child-level-2">
+              <a href="#">Additional housing cost allowance for relocation</a>
+            </li>
+            <li class="child-level-2">
+              <a href="#">Allowance extension for relocation</a>
+            </li>
+            <li class="child-level-2">
+              <a href="#">Cycle to work scheme</a>
+            </li>
+            <li class="child-level-2">
+              <a href="#">Deals on travel, food and entertainment</a>
+            </li>
+            <li class="child-level-2">
+              <a href="#">ePayslips</a>
+            </li>
+            <li class="child-level-2">
+              <a href="/intra-b/hr/pay/pay-award">Pay award</a>
+            </li>
+            <li class="child-level-2">
+              <a href="/intra-b/hr/pay/pay-deadlines">Pay deadlines</a>
+            </li>
+            <li class="child-level-2">
+              <a href="#">Qualification allowance</a>
+            </li>
+            <li class="child-level-2">
+              <a href="#">Salary advance</a>
+            </li>
+            <li class="child-level-2">
+              <a href="#">Season ticket loans</a>
+            </li>
+            <li class="child-level-2">
+              <a href="#">Travel expenses</a>
+            </li>
 
           </ul>
       </div>
