--- a/app/views/intra-b/hr/index.html
+++ b/app/views/intra-b/hr/index.html
@@ -34,7 +34,7 @@
       </li>
 
       <li class="category-item current main-nav-guidance">
-        <a href="guidance2" class="category-link">
+        <a href="/intra-b/guidance2" class="category-link">
           LAA guidance  </a>
 
         <ul class="children-list">
