fixes for B prototype

--- a/app/views/intra-b/hr/index.html
+++ b/app/views/intra-b/hr/index.html
@@ -87,7 +87,7 @@
 
       <div class="left-hand-navigation">
           <ul>
-            <li class="main-section"><a href="/intra-b/guidance1">Guidance &amp; forms</a></li>
+            <li class="main-section"><a href="/intra-b/guidance1">LAA guidance</a></li>
             <li class="parent-section"><a href="#">HR</a></li>
 
             <li class="child">
