--- a/app/views/intra-b/hr/index.html
+++ b/app/views/intra-b/hr/index.html
@@ -34,6 +34,14 @@
       </li>
 
       <li class="category-item current main-nav-guidance">
+        <a href="/intra-b/guidance1" class="category-link">
+          MoJ guidance  </a>
+
+        <ul class="children-list">
+            </ul>
+      </li>
+
+      <li class="category-item current main-nav-guidance">
         <a href="/intra-b/guidance2" class="category-link">
           LAA guidance  </a>
 
