fixes for B prototype

--- a/app/views/intra-b/index.html
+++ b/app/views/intra-b/index.html
@@ -248,33 +248,34 @@
         <div class="grid-row">
           <div class="column-half">
             <ul class="apps">
-              <li><a href="#">Link 1</a></li>
-              <li><a href="#">Link 1</a></li>
-              <li><a href="#">Link 1</a></li>
-              <li><a href="#">Link 1</a></li>
-              <li><a href="#">Link 1</a></li>
+              <li><a href="#">People Finder</a></li>
+              <li><a href="#">Travel booking</a></li>
+              <li><a href="#">Jobs</a></li>
+              <li><a href="#">Phoenix</a></li>
+              <li><a href="#">IT portal</a></li>
+              <li><a href="#">Room booking</a></li>
+              <li><a href="#">Pensions</a></li>
+              <li><a href="#">Civil Service Learning</a></li>
             </ul>
           </div>
           <div class="column-half">
-            <ul class="apps">
-              <li><a href="#">Link 1</a></li>
-              <li><a href="#">Link 1</a></li>
-              <li><a href="#">Link 1</a></li>
-              <li><a href="#">Link 1</a></li>
-              <li><a href="#">Link 1</a></li>
-            </ul>
+
           </div>
 
         </div>
         <h2 class="home-page-h2">Quick links</h2>
         <ul class="quick-links">
-          <li><a href="#">Link 1</a></li>
-          <li><a href="#">Link 1</a></li>
-          <li><a href="#">Link 1</a></li>
-          <li><a href="#">Link 1</a></li>
-          <li><a href="#">Link 1</a></li>
+          <ul class="apps">
+            <li><a href="#">Buildings and facilities</a></li>
+            <li><a href="#">Contact Shared Services</a></li>
+            <li><a href="/intra-b/hr/leave">Leave</a></li>
+            <li><a href="#">Learning and development</a></li>
+            <li><a href="#">Performance management</a></li>
+          </ul>
         </ul>
 
+
+      </div>
 
       </div>
     </div>
