fixes for B prototype

--- a/app/views/intra-b/index.html
+++ b/app/views/intra-b/index.html
@@ -243,7 +243,7 @@
     <div class="column-third">
       <h2 class="home-page-h2 my-agency">My LAA</h2>
       <div class="archive-panel">
-        <p><a href="#">LAA archive intranet</a></p>
+        <p><a href="http://intranet.justice.gsi.gov.uk/laa/">LAA archive intranet</a></p>
       </div>
         <div class="grid-row">
           <div class="column-half">
