fixes for B prototype

--- a/app/views/intra-b/guidance2.html
+++ b/app/views/intra-b/guidance2.html
@@ -131,7 +131,7 @@
       </h4>
     </li><li class="child-item">
       <h4 class="child-title">
-        <a href="https://intranet.justice.gov.uk/guidance/hr/sick-absence/">Sick absence</a>
+        <a href="/intra-b/hr/leave">Leave</a>
       </h4>
     </li></ul>
 
